# annocli

./: .gitignore  README.md  USAGE.md  pyproject.toml  test.sh
.github/: copilot-instructions.md
src/: test_multi.json
src/annocli/: cli.py
src/annocli/core/: alias_helpers.py  describe_helpers.py  download_helpers.py  general_helpers.py  helpers.py  requests.py  stats_helpers.py  summary_helpers.py
